5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1674_1105.log
== TEST (2019-04-25 11:10:44) 
-- CODE:
brasao = input("Descrição: ").lower()

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and 
	brasao != "dragao" and brasao != rosa
  )
-- ERROR:
File "XXXX", line 7
    )
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:50) 
-- CODE:
brasao = input("Descrição: ").lower()

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and 
	brasao != "dragao" and brasao != rosa
  ):
-- ERROR:
File "XXXX", line 8
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:56) 
-- CODE:
brasao = input("Descrição: ").lower()

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and 
	brasao != "dragao" and brasao != rosa):
-- ERROR:
File "XXXX", line 7
    
                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:37) 
-- CODE:
brasao = input("Descrição: ").lower()

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and 
	brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado"
  and brasao !="turta"):
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado"
NameError: name 'rosa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:04) 
-- CODE:
brasao = input("Descrição: ").lower()

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
NameError: name 'rosa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:21) 
-- CODE:
brasao = input("Descrição: ")

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
NameError: name 'rosa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:52) 
-- CODE:
brasao = input("Descricao:").lower

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
NameError: name 'rosa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:52) 
-- CODE:
brasao = input("Descricao:").lower

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
NameError: name 'rosa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:52) 
-- CODE:
brasao = input("Descricao:").lower

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
NameError: name 'rosa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:52) 
-- CODE:
brasao = input("Descricao:").lower

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
NameError: name 'rosa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:56) 
-- CODE:
brasao = input("Descricao:").lower()

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != rosa and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
NameError: name 'rosa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:15:08) 
-- CODE:
brasao = input("Descricao:").lower()

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != "rosa" and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:15:20) 
-- CODE:
brasao = input("Descricao:").lower()

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != "rosa" and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:20:40) 
-- CODE:
brasao = input("Descricao:").lower()

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != "rosa" and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
	print("Brasao invalido")
elif(brasao =="lobo"):
	print("Casa: Stark")
elif(brasao =="leao"):
	print("Casa: Lanister")
elif(brasao =="veado"):
	print("Casa: Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao =="rosa"):
	print("Casa: Tyrell")
elif(brasao =="sol"):
	print("Casa: Martell")
elif(brasao =="lula"):
	print("Casa: Greyjoy")
elif(brasao =="esfolado"):
	print("Casa: Bolton")
elif(brasao =="turta"):
	print("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:20:50) 
-- CODE:
brasao = input("Descricao:").lower()

print("Entrada:", brasao)

if(brasao != "lobo" and brasao != "leao" and brasao != "veado" and brasao != "dragao" and brasao != "rosa" and brasao != "sol" and brasao !="lula" and brasao != "esfolado" and brasao !="turta"):
	print("Brasao invalido")
elif(brasao =="lobo"):
	print("Casa: Stark")
elif(brasao =="leao"):
	print("Casa: Lanister")
elif(brasao =="veado"):
	print("Casa: Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao =="rosa"):
	print("Casa: Tyrell")
elif(brasao =="sol"):
	print("Casa: Martell")
elif(brasao =="lula"):
	print("Casa: Greyjoy")
elif(brasao =="esfolado"):
	print("Casa: Bolton")
elif(brasao =="turta"):
	print("Casa: Tully")
-- EXECUTION TIME:
0.160881
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
